cabeçalho: Adiciona logo
Adicionado o logo no cabeçalho da página.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="./styles/output.css">
     
-    
+    <link rel="icon" href="./img/logo.png">
     <title>Let's Go Burger</title>
 </head>
 <body>
