--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
     <!-- FIM MODAL CART -->
 
     <!-- BUTTON CART FOOTER -->
-    <footer class="w-full bg-green-600 py-3 fixed bottom-0 z-40 flex items-center justify-center ">
+    <footer class="w-full bg-green-600 h-14 fixed bottom-0 z-40 flex items-center justify-center ">
         <button 
-        class="font-bold flex items-center justify-center gap-2 w-full"
+        class="font-bold flex items-center justify-center gap-2 h-full w-full"
         id="cart-btn"
         >
             (<span id="cart-count">0</span>) Veja seu carrinho <i class="fa fa-shopping-cart text-lg text-white"></i>
