--- a/index.html
+++ b/index.html
@@ -27,10 +27,17 @@
             <h1 class="text-4xl mt-4 mb-2 font-bold text-white">
                 LET's GO BURGER
             </h1>
-            <span class=" text-white font-medium">Trav. Rio da Silva, 423, Santa Amélia</span>
+
+            <ul class="">
+                <a class="text-white font-medium" 
+                    href="https://www.google.com/maps/place/R.+Gilberto+Vieira+Leite,+423+-+Tabuleiro+do+Martins,+Maceió+-+AL,+57060-175/@-9.5981522,-35.7691366,17z/data=!3m1!4b1!4m6!3m5!1s0x70148e9990ec9cd:0x585376631de4e2ce!8m2!3d-9.5981522!4d-35.7691366!16s%2Fg%2F11hb6st2lc?entry=ttu">
+                    Trav. Rio da Silva, 423, Santa Amélia</a>
+            </ul>
+        
             <div class="bg-green-600 px-4 py-1 rounded-lg mt-4" id="date-span">
-                <span class="font-medium">Ter á Dom - 18:00 as 23:00</span>
+                <span class="font-medium">Ter a Dom - 18:00 às 23:00</span>
             </div>
+
         </div>
     </header>
     <!-- FIM HEADER -->
@@ -39,14 +46,25 @@
         Conheça nosso cardápio
     </h2>
 
+    <nav class="flex mx-auto max-w-72 justify-evenly mb-10 items-center sticky top-2 p-1 bg-[#f6f7f8] rounded border-2 border-gray-400 border-solid ">
+        <ul class=" p-2">
+            <a href="#burgers">Let's Burgers</a>
+        </ul>
+        <div class="cursor-default">|</div>
+        <ul class=" p-2">
+            <a href="#bebidas">Bebidas</a>
+        </ul>
+    </nav>
+    
+
     <!-- INICIO MENU -->
     <div id="menu">
-        <h2 class="text-3xl md:text-4xl font-bold mb-6 mx-auto max-w-7xl px-2">BURGERS</h2>
+        <h2 id="burgers" class="text-3xl md:text-4xl mb-6 mx-auto max-w-7xl px-2">LET's BURGERS</h2>
         <!-- GRID BURGERS -->
         <main id="burger-container" class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-10"></main>
         <!-- FIM GRID BURGERS -->
 
-        <h2 class="text-3xl md:text-4xl font-bold mb-6 mx-auto max-w-7xl px-2">BEBIDAS</h2>
+        <h2 id="bebidas" class="text-3xl md:text-4xl mb-6 mx-auto max-w-7xl px-2">BEBIDAS</h2>
         <!-- GRID BEBIDAS -->
         <div id="bebidas-container" class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-28"></div>
         <!-- FIM GRID BEBIDAS -->
@@ -84,9 +102,9 @@
     <!-- FIM MODAL CART -->
 
     <!-- BUTTON CART FOOTER -->
-    <footer class="w-full bg-green-600 h-14 fixed bottom-0 z-40 flex items-center justify-center ">
+    <footer class=" h-14 sticky bottom-2 flex items-center justify-center mx-auto max-w-72 md:max-w-7xl">
         <button 
-        class="font-bold flex items-center justify-center gap-2 h-full w-full"
+        class="font-bold flex items-center justify-center gap-2 bg-green-600 h-full w-full rounded"
         id="cart-btn"
         >
             (<span id="cart-count">0</span>) Veja seu carrinho <i class="fa fa-shopping-cart text-lg text-white"></i>
