footer: Remove ajuste
-Removido o ajuste do footer

--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
     <!-- FIM MODAL CART -->
 
     <!-- BUTTON CART FOOTER -->
-    <footer class=" h-14 sticky bottom-2 flex items-center justify-center mx-auto max-w-72 md:max-w-7xl">
+    <footer class="w-full bg-green-600 h-14 fixed bottom-0 z-40 flex items-center justify-center ">
         <button 
-        class="font-bold flex items-center justify-center gap-2 bg-green-600 h-full w-full rounded"
+        class="font-bold flex items-center justify-center gap-2 h-full w-full"
         id="cart-btn"
         >
             (<span id="cart-count">0</span>) Veja seu carrinho <i class="fa fa-shopping-cart text-lg text-white"></i>
