nav, header: Ajustes
- Ajustes de responsividade

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <img class="w-5 h-5" src="./img/google-maps.png" alt="maps"> Trav. Rio da Silva, 423, Santa Amélia</a>
             </ul>
 
-            <div class="flex gap-2 mt-2 md:gap-4">
+            <div class="flex gap-2 mt-2 flex-col md:flex-row md:gap-4">
                 <a class="flex gap-1 justify-center items-center  text-white" href="https://wa.me/82999211763"> <img src="./img/whatsapp-2.png" alt="whatsapp" class="w-5 h-5"> Whatsapp</a>
                 <a class="flex gap-1 justify-center items-center  text-white" href="https://www.instagram.com/letsgoburgermaceio/"><img src="./img/instagram-2.png" alt="whatsapp" class="w-5 h-5"> @letsgoburgermaceio</a>
             </div>
@@ -53,7 +53,7 @@
     </h2>
 
     <!-- COMEÇO NAV-->
-    <nav class="flex mx-auto max-w-7xl gap-3 justify-evenly items-center sticky top-2 p-1 bg-[#f6f7f8] rounded border-2 border-gray-400 border-solid overflow-x-auto overflow-hidden ">
+    <nav class="flex mx-auto max-w-7xl gap-3 md:justify-evenly items-center sticky top-2 p-1 bg-[#f6f7f8] rounded border-2 border-gray-400 border-solid overflow-x-auto overflow-hidden ">
         <a class="p-2 text-center" href="#artesanal">Burgers Artesanal</a>
         <div class="cursor-default">|</div>
         <a class="p-2 text-center" href="#tradicional">Burgers Tradicional</a>
