produtos: Adiciona produtos
- Adicionados os produtos
- Ajuste na navegação

--- a/index.html
+++ b/index.html
@@ -54,12 +54,14 @@
     </h2>
 
     <!-- COMEÇO NAV-->
-    <nav class="flex text-sm md:text-base mx-auto max-w-7xl gap-3 justify-between md:justify-evenly items-center sticky top-2 p-1 bg-[#f6f7f8] rounded border-2 border-gray-400 border-solid overflow-x-auto overflow-hidden ">
+    <nav class="flex mx-auto max-w-7xl gap-3 justify-between md:justify-evenly items-center sticky top-2 p-1 bg-[#f6f7f8] rounded border-2 border-gray-400 border-solid overflow-x-auto overflow-hidden ">
         <a class="p-2 text-center" href="#artesanal">Burgers Artesanal</a>
         <div class="cursor-default">|</div>
         <a class="p-2 text-center" href="#tradicional">Burgers Tradicional</a>
         <div class="cursor-default">|</div>
-        <a class="p-2 text-center" href="#bebidas">Bebidas</a>
+        <a class="p-2 text-center" href="#refrigerante">Refrigerantes</a>
+        <div class="cursor-default">|</div>
+        <a class="p-2 text-center" href="#suco">Sucos</a>
         <div class="cursor-default">|</div> 
         <a class="p-2 text-center" href="#sobremesa">Sobremesas</a>
     </nav>
@@ -77,15 +79,20 @@
         <main id="burger-container2" class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 "></main>
         <!-- FIM GRID BURGERS -->
 
-        <h2 id="bebidas" class="text-3xl md:text-4xl mb-10 mx-auto max-w-7xl px-2 pt-24">Bebidas</h2>
+        <h2 id="refrigerante" class="text-3xl md:text-4xl mb-10 mx-auto max-w-7xl px-2 pt-24">Refrigerantes</h2>
         <!-- GRID BEBIDAS -->
         <div id="bebidas-container" class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 "></div>
         <!-- FIM GRID BEBIDAS -->
 
-        <h2 id="sobremesa" class="text-3xl md:text-4xl mb-10 mx-auto max-w-7xl px-2 pt-24">Sobremesas</h2>
+        <h2 id="suco" class="text-3xl md:text-4xl mb-10 mx-auto max-w-7xl px-2 pt-24">Sucos</h2>
         <!-- GRID BEBIDAS -->
-        <div id="bebidas-container2" class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-28"></div>
+        <div id="bebidas-container2" class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 "></div>
         <!-- FIM GRID BEBIDAS -->
+
+        <h2 id="sobremesa" class="text-3xl md:text-4xl mb-10 mx-auto max-w-7xl px-2 pt-24">Sobremesas/Outros</h2>
+        <!-- GRID SOBREMESA -->
+        <div id="bebidas-container3" class="grid grid-cols-1 md:grid-cols-2 gap-7 md:gap-10 mx-auto max-w-7xl px-2 mb-28"></div>
+        <!-- FIM GRID SOMREMESA -->
     </div>
     <!-- FIM MENU -->
 
