whatsapp: Personaliza a mensagem

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             </ul>
 
             <div class="flex mt-2 flex-col md:flex-row md:gap-4">
-                <a class="flex gap-1 justify-center items-center  text-white" href="https://wa.me/82999211763"> 
+                <a class="flex gap-1 justify-center items-center  text-white" href="https://wa.me/82999889814"> 
                     <img src="./img/whatsapp-2.png" alt="whatsapp" class="w-5 h-5"> (82) 9 9988-9814</a>
-                <a class="flex gap-1 justify-center items-center  text-white" href="https://www.instagram.com/letsgoburgermaceio/"><img src="./img/instagram-2.png" alt="whatsapp" class="w-5 h-5"> @letsgoburgermaceio</a>
+                <a class="flex gap-1 justify-center items-center  text-white" href="https://www.instagram.com/letsgoburgermaceio/"><img src="./img/instagram-2.png" alt="instagram" class="w-5 h-5"> @letsgoburgermaceio</a>
             </div>
 
         </div>
