modal: Adiciona icon whatsapp
Adicionado o icon do whatsapp no botão de finalizar do modal.

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 
                 <button id="close-modal-btn">Fechar</button>
 
-                <button id="checkout-btn" class="bg-green-500 px-4 py-1 rounded font-bold">Finalizar Pedido</button>
+                <button id="checkout-btn" class="bg-green-500 px-4 py-1 rounded font-bold flex gap-1"> <img src="./img/whatsapp-2.png" alt="whatsapp" class="w-5 h-5"> Finalizar Pedido</button>
             
             </div>
         </div>
